Updated UI for Login and Register

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,8 @@
 
+.ion-color-main{
+    --ion-color-base:#0dd850 ;
+    --ion-color-base-rgb:#8b9dc3;
+    --ion-color-base-contrast:#dfe3ee;
+    --ion-color-contrast-rgb: 	#f7f7f7;
+    --ion-color-tint:#ffffff ; 
+}
