--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="main">
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -22,10 +22,10 @@
   </ion-item>
   <div class="spacer" style="height:20px;" id="login-spacer2"></div>
   <p text-center>
-  <ion-button shape="round">Login</ion-button>
+  <ion-button shape="round" color="primary">Login</ion-button>
 </p>
 <p text-center>
-  Not A Member? <a href="#">Sign Up here!</a>
+  Not A Member? <a href="#" style="color:#3b5998 ">Sign Up here!</a>
 </p>
 
 
